--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+        <div>
+          修复
+        </div>
     <title>sell</title>
     <link rel="stylesheet" type="text/css" href="static/css/reset.css">
   </head>
